Clear managed profile on start-up if having a primary account is not allowed.

This CL clears the profile when it is loaded is the primary account is no longer
allowed (e.g. profile was marked as a managed profile or the profile).

As this is a very destructive action (the profile directory is removed from disk),
the user is presented with a permanent browser modal dialog.

Screenshots for each platform:
Linux: https://drive.google.com/open?id=1HO693VkDnC0qjPxHJdFZr3CPqOs2Hidf
Windows: https://drive.google.com/open?id=1gvmvt2wUsA42nmcVWTZCB1F5encHJRRH

Design doc [Google internal only]:
https://docs.google.com/document/d/1QqWoV1I7WgrzeHJwm9agG56ZqXD_Q2L3LB3K7Ck89GI/edit?usp=sharing

Bug: 907474, 887756

Change-Id: Ib1187d79a45e0829b57768582c5d11126b0a5c46
Reviewed-on: https://chromium-review.googlesource.com/c/1288829
Commit-Queue: Mihai Sardarescu <msarda@chromium.org>
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: David Roger <droger@chromium.org>
Reviewed-by: Owen Min <zmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611135}